[package]
name = "pi_async_graph"
version = "0.3.1"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "async graph"
repository = "https://github.com/GaiaWorld/pi_async_graph.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async_graph"]

[dependencies]
pi_graph = "0.1"
pi_async = "0.5"
pi_share = "0.4"
futures = "0.3"
pi_futures = "0.1"
flume = "0.10"

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"