[package]
name = "pi_async_graph"
version = "0.7.1"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "async graph"
repository = "https://github.com/GaiaWorld/pi_async_graph.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async_graph"]

[dependencies]
pi_graph = "0.2"
pi-async-rt = "0.2"
pi_share = "0.5"
pi_futures = "0.1"
flume = "0.10"
pi_slotmap = "0.2"
pi_map = "0.2"

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"
futures = "0.3"


# [patch.crates-io]
# pi_graph = { path = "../pi_graph" }